Fixing issues with new logo alignemt. Siwthcing to svgs

--- a/themes/ICTheme/static/css/main.scss
+++ b/themes/ICTheme/static/css/main.scss
@@ -181,6 +181,9 @@ pre {
 	color: $offwhite;
   font-weight: 700;
   margin-left: -10px;
+	&:nth-of-type(1) {
+		margin-top: 10px;
+	}
 	&:nth-of-type(2) {
 		margin-bottom: 10px;
 	}
